[gd_scene load_steps=3 format=3 uid="uid://s5d24gt1pmvx"]

[ext_resource type="Script" uid="uid://6n1hyjebqtmu" path="res://Scenes/game_over_ui.gd" id="1_vvx4t"]
[ext_resource type="FontFile" uid="uid://75i2xeboijlb" path="res://Assets/Fonts/Audiowide-Regular.ttf" id="2_lth8f"]

[node name="GameOverUI" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_vvx4t")

[node name="Panel" type="Panel" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="GameOver" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 334.0
offset_top = 60.0
offset_right = 812.0
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_lth8f")
theme_override_font_sizes/font_size = 64
text = "GAME OVER !"

[node name="LevelProgressBar" type="ProgressBar" parent="Panel"]
layout_mode = 0
offset_left = 619.0
offset_top = 232.0
offset_right = 623.0
offset_bottom = 319.0
theme_override_colors/font_color = Color(0.4745098, 0.7882353, 0.9490196, 1)
theme_override_fonts/font = ExtResource("2_lth8f")
theme_override_font_sizes/font_size = 64
show_percentage = false

[node name="ProgressText" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 213.0
offset_top = 231.0
offset_right = 562.0
offset_bottom = 314.0
theme_override_fonts/font = ExtResource("2_lth8f")
theme_override_font_sizes/font_size = 64

[node name="RestartButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 341.0
offset_top = 434.0
offset_right = 628.0
offset_bottom = 525.0
theme_override_fonts/font = ExtResource("2_lth8f")
theme_override_font_sizes/font_size = 64
text = "Restart"

[node name="QuitButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 700.0
offset_top = 442.0
offset_right = 860.0
offset_bottom = 533.0
theme_override_fonts/font = ExtResource("2_lth8f")
theme_override_font_sizes/font_size = 64
text = "Quit"
